--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Добро пожаловать на мой сайт !</h1>
+    <p>Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+    <button>Поехали!</button>
 </body>
 </html>
