--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Добро пожаловать на мой сайт !</h1>
-    <p>Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
-    <button>Поехали!</button>
+    <div class="top">
+        <h1 class="title">Добро пожаловать на мой сайт !</h1>
+        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+        <button class="top__button">Поехали!</button>
+    </div>
+    <footer class="footer">
+        
+    </footer>
+    
 </body>
 </html>
