--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="top center">
+        <h1 class="title">Добро пожаловать на мой сайт !</h1>
+        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+        <button class="top__button">Поехали!</button>
+    </div>
+  <div class="product__content center">
+        <a href="#"><img class="product" src="img/Group 1.jpg" alt=""></a>
+        <a href="#"><img class="product" src="img/Group 2.jpg" alt=""></a>
+        <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>
+  </div>
     
 </body>
 </html>
