--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top center">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
-        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
         <button class="top__button">Поехали!</button>
     </div>
   <div class="product__content center">
