--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="top center">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
-        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нижимай <span class="top__text_text">поехали</span> и приступай</p>
+        <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нижимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
         <button class="top__button">Поехали!</button>
     </div>
     <div class="product__content center">
