--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
     <div class="top center">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
         <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
-        <button class="top__button">Поехали!</button>
+        <button class="button">Поехали!</button>
     </div>
     <div class="product__content center">
         <a href="#"><img class="product" src="img/Group 1.jpg" alt=""></a>
         <a href="#"><img class="product" src="img/Group 2.jpg" alt=""></a>
         <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>                      
-</div>    
+    </div>  
+    <div class="section center">
+        <div class="section__heading"><h2 class="heading">Времена года!</h2>
+        <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
+        <button class="button">Играть!</button>
+        </div>
+        <div class="img"><a class="heading__img" href="#"><img src="img/undraw_video_game_night_8h8m 1.png" alt=""></a></div>
+    </div>
+    
+    <script src="index.js"></script>  
 </body>
 </html>
