--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <div class="top center">
+        <div class="top__title">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
         <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
         <button class="button">Поехали!</button>
+        </div>
     </div>
     <div class="product__content center">
         <a href="#"><img class="product" src="img/Group 1.jpg" alt=""></a>
@@ -21,7 +23,8 @@
         <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>                      
     </div>  
     <div class="section center">
-        <div class="section__heading"><h2 class="heading">Времена года!</h2>
+        <div class="section__heading">
+        <h2 class="heading">Времена года!</h2>
         <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
         <button class="button">Играть!</button>
         </div>
