--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>                      
     </div>  
     <div class="section center">
-        <div class="section__heading">
+        <div class="section__heading center">
         <h2 class="heading">Времена года!</h2>
         <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
         <button class="button">Играть!</button>
         </div>
-        <div class="img"><a class="heading__img" href="#"><img src="img/undraw_video_game_night_8h8m 1.png" alt=""></a></div>
+        <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m 1.png" alt=""></div>
     </div>
     
     <script src="index.js"></script>  
