--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <button class="button">Поехали!</button>
         </div>
     </div>
-    <div class="product__content center">
-        <a href="#"><img class="product" src="img/Group 1.jpg" alt=""></a>
-        <a href="#"><img class="product" src="img/Group 2.jpg" alt=""></a>
-        <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>                      
+    <div class="game__box center">
+        <a class="game" href="#"><img class="product" src="img/Group 1.png" alt=""><span class="game__title">Игра 1</span></a>
+        <a class="game" href="#"><img class="product" src="img/Group 2.png" alt=""><span class="game__title">Игра 2</span></a>
+        <a class="game" href="#"><img class="product" src="img/Group 3.png" alt=""><span class="game__title">Игра 3</span></a>                   
     </div>  
     <div class="section center">
         <div class="section__heading center">
