--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
     </div>
     <div class="game__box center">
-        <a class="game" href="#"><img class="product" src="img/Group 1.png" alt=""><span class="game__title">Игра 1</span></a>
-        <a class="game" href="#"><img class="product" src="img/Group 2.png" alt=""><span class="game__title">Игра 2</span></a>
-        <a class="game" href="#"><img class="product" src="img/Group 3.png" alt=""><span class="game__title">Игра 3</span></a>                   
+        <a class="game" href="#"><img class="product" src="img/game1.png" alt=""><span class="game__title">Игра 1</span></a>
+        <a class="game" href="#"><img class="product" src="img/game2.png" alt=""><span class="game__title">Игра 2</span></a>
+        <a class="game" href="#"><img class="product" src="img/game3.png" alt=""><span class="game__title">Игра 3</span></a>                   
     </div>  
     <div class="section center">
         <div class="section__heading center">
