--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
 </head>
 <body>
     <div class="top center">
+        <div class="top__title">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
         <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
-        <button class="top__button">Поехали!</button>
+        <button class="button">Поехали!</button>
+        </div>
     </div>
-    <div class="product__content center">
-        <a href="#"><img class="product" src="img/Group 1.jpg" alt=""></a>
-        <a href="#"><img class="product" src="img/Group 2.jpg" alt=""></a>
-        <a href="#"><img class="product" src="img/Group 3.jpg" alt=""></a>                      
-</div>    
+    <div class="game__box center">
+        <a class="game" href="#"><img class="product" src="img/game1.png" alt=""><span class="game__title">Игра 1</span></a>
+        <a class="game" href="#"><img class="product" src="img/game2.png" alt=""><span class="game__title">Игра 2</span></a>
+        <a class="game" href="#"><img class="product" src="img/game3.png" alt=""><span class="game__title">Игра 3</span></a>                   
+    </div>  
+    <div class="section center">
+        <div class="section__heading center">
+        <h2 class="heading">Времена года!</h2>
+        <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
+        <button class="button">Играть!</button>
+        </div>
+        <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m 1.png" alt=""></div>
+    </div>
+    
+    <script src="index.js"></script>  
 </body>
 </html>
