--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         </div>
         <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m 1.png" alt=""></div>
     </div>
-    
+    <div class="section center">
+        <div class="img"><img class="heading__img" src="img/undraw_gaming_re_cma2 1.png" alt=""></div>
+        <div class="section__heading center">
+        <h2 class="heading heading">Запомни слова</h2>
+        <p class="heading__text">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</p>
+        <button class="button">Играть!</button>
+        </div>
+        
+    </div>
     <script src="index.js"></script>  
 </body>
 </html>
