--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
         <button class="button">Играть!</button>
         </div>
-        <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m 1.png" alt=""></div>
+        <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m.png" alt=""></div>
     </div>
     <div class="section center">
         <div class="img"><img class="heading__img" src="img/undraw_gaming_re_cma2 1.png" alt=""></div>
