--- a/index.html
+++ b/index.html
@@ -36,9 +36,18 @@
         <h2 class="heading ">Запомни слова</h2>
         <p class="heading__text ">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</p>
         <button class="button">Играть!</button>
-        </div>
-        
+        </div>        
     </div>
+    <div class="section section__riddle center">
+        <div class="section__heading center">
+        <h2 class="heading ">Игра в загадки</h2>
+        <p class="heading__text ">Компьютер загадывает загадку, вам необходимо ее угадать, если вы дадите не правильный ответ, то компьютер даст вам подсказку. У вас будет три попытки и две подсказки.</p>
+        <button class="button">Играть!</button>
+        </div>        
+    </div>
+    <footer class="footer center">
+        <p class="footer__text">Все права защищены</p>
+    </footer>
     <script src="index.js"></script>  
 </body>
 </html>
