--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top__title">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
         <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
-        <button class="button">Поехали!</button>
+        <button class="button" onclick="showMessage()">Поехали!</button>       
         </div>
     </div>
     <div class="game__box center">
