--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="top__title">
         <h1 class="title">Добро пожаловать на мой сайт !</h1>
         <p class="top__text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай <span class="top__text_new">поехали</span> и <span class="top__text_new">приступай</span></p>
-        <button class="button" onclick="showMessage()">Поехали!</button>       
+        <button class="button">Поехали!</button>       
         </div>
     </div>
     <div class="game__box center">
@@ -26,7 +26,7 @@
         <div class="section__heading center">
         <h2 class="heading">Времена года!</h2>
         <p class="heading__text">Нажмите кнопку играть, введите номер месяца (от 1 до 12) и вы узнаете к какому времени года он относится</p>
-        <button class="button">Играть!</button>
+        <button onclick="seasons()" class="button">Играть!</button>
         </div>
         <div class="img"><img class="heading__img" src="img/undraw_video_game_night_8h8m.png" alt=""></div>
     </div>
