--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="section__heading center">
         <h2 class="heading ">Запомни слова</h2>
         <p class="heading__text ">При нажатии на кнопку играть, вы увидите несколько слов, которые вам необходимо запомнить.</p>
-        <button class="button">Играть!</button>
+        <button onclick="memorizeWords()" class="button">Играть!</button>
         </div>        
     </div>
     <div class="section section__riddle center">
